--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="TestQueryParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestEvaluator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
