Fixed parser Proc, added unit testing on Prog Parser

--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Desktop\TestProgramParser.cpp" />
     <ClCompile Include="TestPKBVarTable.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
