--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="TestEvaluator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Desktop\TestProgramParser.cpp">
+    <ClCompile Include="TestProgramParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
