--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TestDesignExtractor.cpp" />
     <ClCompile Include="TestPKBFollow.cpp" />
     <ClCompile Include="TestPKBParent.cpp" />
     <ClCompile Include="TestPKBVarTable.cpp" />
