--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="TestPKBWrappers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestDesignExtractor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
