Auto stash before merge of "devel" and "origin/devel"

--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="TestDesignExtractor.cpp" />
     <ClCompile Include="TestPKBFollow.cpp" />
     <ClCompile Include="TestPKBParent.cpp" />
+    <ClCompile Include="TestPKBUses.cpp" />
     <ClCompile Include="TestPKBVarTable.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
