--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -18,7 +18,10 @@
     <ClCompile Include="..\source\Parser.cpp" />
     <ClCompile Include="..\source\PKB.cpp" />
     <ClCompile Include="..\source\PKBFollow.cpp" />
+    <ClCompile Include="..\source\PKBModifies.cpp" />
     <ClCompile Include="..\source\PKBParent.cpp" />
+    <ClCompile Include="..\source\PKBProcedure.cpp" />
+    <ClCompile Include="..\source\PKBStmt.cpp" />
     <ClCompile Include="..\source\PKBUses.cpp" />
     <ClCompile Include="..\source\Preprocessor.cpp" />
     <ClCompile Include="..\source\Query.cpp" />
@@ -36,7 +39,10 @@
     <ClInclude Include="..\source\PKB.h" />
     <ClInclude Include="..\source\PKBFollow.h" />
     <ClInclude Include="..\source\PKBHash.h" />
+    <ClInclude Include="..\source\PKBModifies.h" />
     <ClInclude Include="..\source\PKBParent.h" />
+    <ClInclude Include="..\source\PKBProcedure.h" />
+    <ClInclude Include="..\source\PKBStmt.h" />
     <ClInclude Include="..\source\PKBUses.h" />
     <ClInclude Include="..\source\Preprocessor.h" />
     <ClInclude Include="..\source\Query.h" />
