--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -17,12 +17,14 @@
     <ClCompile Include="..\source\NestedResult.cpp" />
     <ClCompile Include="..\source\Parser.cpp" />
     <ClCompile Include="..\source\PKB.cpp" />
+    <ClCompile Include="..\source\PKBCall.cpp" />
     <ClCompile Include="..\source\PKBFollow.cpp" />
     <ClCompile Include="..\source\PKBModifies.cpp" />
     <ClCompile Include="..\source\PKBParent.cpp" />
     <ClCompile Include="..\source\PKBProcedure.cpp" />
     <ClCompile Include="..\source\PKBStmt.cpp" />
     <ClCompile Include="..\source\PKBUses.cpp" />
+    <ClCompile Include="..\source\PKBVariable.cpp" />
     <ClCompile Include="..\source\Preprocessor.cpp" />
     <ClCompile Include="..\source\Query.cpp" />
     <ClCompile Include="..\source\QueryParser.cpp" />
@@ -37,6 +39,7 @@
     <ClInclude Include="..\source\NestedResult.h" />
     <ClInclude Include="..\source\Parser.h" />
     <ClInclude Include="..\source\PKB.h" />
+    <ClInclude Include="..\source\PKBCall.h" />
     <ClInclude Include="..\source\PKBFollow.h" />
     <ClInclude Include="..\source\PKBHash.h" />
     <ClInclude Include="..\source\PKBModifies.h" />
@@ -44,6 +47,7 @@
     <ClInclude Include="..\source\PKBProcedure.h" />
     <ClInclude Include="..\source\PKBStmt.h" />
     <ClInclude Include="..\source\PKBUses.h" />
+    <ClInclude Include="..\source\PKBVariable.h" />
     <ClInclude Include="..\source\Preprocessor.h" />
     <ClInclude Include="..\source\Query.h" />
     <ClInclude Include="..\source\QueryParser.h" />
