Added Next Table

--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="..\source\PKBCall.cpp" />
     <ClCompile Include="..\source\PKBFollow.cpp" />
     <ClCompile Include="..\source\PKBModifies.cpp" />
+    <ClCompile Include="..\source\PKBNext.cpp" />
     <ClCompile Include="..\source\PKBParent.cpp" />
     <ClCompile Include="..\source\PKBProcedure.cpp" />
     <ClCompile Include="..\source\PKBStmt.cpp" />
